Upgraded all components except turntable (TODO) to newest milo version